--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* #region Commons */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,4 +10,301 @@ body {
     background: linear-gradient(to bottom,
     #009687f8 0 20%, #DADBD4 20% 100%);
     height: 100vh;
+    font-family: 'Poppins', sans-serif;
 }
+
+
+#app {
+    height: 90vh;
+}
+
+.container {
+    width: 1200px;
+    height: 600px;
+    height: 90vh;
+    background-color: lightblue;
+    margin: 0 auto;
+    position: relative;
+    top: 2rem;
+    display: flex;
+}
+/* #endregion Commons */
+
+/* #region col-left */
+.col-left {
+   /*  background-color: aqua; */
+    height: 100%;
+    width: 30%;
+}
+
+.user-info {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    background-color: #EAEAEA;
+}
+
+.image_name {
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.image_name>img {
+    border-radius: 50%;
+}
+
+.user_icons {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem 0.5rem 0.5rem;
+    column-gap: 0.8rem;
+    color: #babbb3;
+}
+
+.notify_new_messages {
+    background-color: rgb(122, 221, 248);
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    column-gap: 0.6rem;
+}
+
+.bell {
+    background-color: white;
+    border-radius: 50%;
+    padding: 0.7rem 0.5rem;
+    color: rgb(122, 221, 248);
+}
+
+.bell>i {
+    transform: translate(0 , -50%);
+}
+
+.notify_text>p {
+    font-size: 12px;
+}
+
+.notify_text>a {
+    font-size: 10px;
+    color: gray;
+}
+
+.search_chat {
+    background-color: white;
+    padding: 0.2rem;
+}
+
+.search_bar {
+    display: flex;
+}
+
+.glass_icon {
+    border: 1px solid lightsteelblue;
+    padding: 0.2rem 1rem;
+    border-top-left-radius: 0.2rem;
+    border-bottom-left-radius: 0.2rem;
+    background-color: white;
+    color: lightgray;
+}
+
+.search_bar>input {
+    border: 1px solid lightsteelblue;
+    border-top-right-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
+    width: 100%;
+}
+
+.search_bar>input::placeholder {
+    color: lightgray;
+    font-size: 13px;
+    padding-left: 0.5rem;
+}
+
+.friends_chats {
+    width: 100%;
+    height: calc(100% - 174px);
+    background-color: white;
+    overflow-y: scroll;
+}
+
+.friend_chat {
+    padding: 0.4rem;
+    border-bottom: 1px solid gainsboro;
+    display: flex;
+    justify-content: space-between;
+}
+
+.friend_chat:hover {
+    background-color: rgb(236, 236, 236);
+}
+
+.friend_details {
+    display: flex;
+    column-gap: 1rem;
+}
+
+.friend_chat .last_message {
+    font-size: 10px;
+    color: lightgray;
+}
+
+.friend_image>img {
+   border-radius: 50%;
+}
+
+.friend_text>p {
+    color: lightgray;
+    font-size: 12px;
+}
+
+/* #endregion col-left */
+
+/* #region col-right */
+
+.col-right {
+  /*   background-color: bisque; */
+    height: 100%;
+    width: 70%;
+}
+
+/* #region chat_head */
+
+.chat_head {
+    background-color: #EAEAEA;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem 0 0.6rem;
+    border-left: 1px solid gainsboro;
+}
+
+.friend_head {
+    padding: 0.5rem 0 0.3rem 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.head_details {
+    display: flex;
+    column-gap: 1rem;
+}
+
+.head_image>img {
+   border-radius: 50%;
+}
+
+.head_text>p {
+    color: lightgray;
+    font-size: 12px;
+}
+
+.icons_head>i {
+    color: #babbb3;
+    margin-left: 0.6rem;
+}
+
+/* #endregion chat_head */
+
+/* #region chat_main */
+
+.chat_main {
+   /*  background-color: cyan; */
+    background-image: url(".././img/mine.jpg");
+    background-position: cover;
+    height: 81%;
+    overflow-y: scroll;
+    position: relative;
+}
+
+.messages_position {
+    padding: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;    
+}
+
+.message_green{
+    padding: 0.5rem;
+    background-color: palegreen;
+    z-index: 2;
+    border-top-left-radius: 0.8rem;
+    border-bottom-left-radius: 0.8rem;
+    border-bottom-right-radius: 0.8rem;
+    text-align: left;
+    margin-bottom: 1rem;
+    align-self: flex-end;
+
+}
+
+.message_white {
+    padding: 0.5rem;
+    background-color: white;
+    border-top-left-radius: 0.8rem;
+    border-top-right-radius: 0.8rem;
+    border-bottom-right-radius: 0.8rem;
+    z-index: 2;
+    /* border-radius: 0.5rem; */
+    text-align: left;
+    margin-top: 1rem;
+    align-self: flex-start;
+}
+
+.text_message>p {
+ font-size: 13px;
+}
+
+.text_message>div {
+    font-size: 10px;
+    color: #babbb3;
+}
+
+/* #endregion chat_main */
+
+/* #region chat_bottom */
+
+.chat_bottom {
+    background-color: #EAEAEA;
+    height: 9%;
+}
+
+.send_message {
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.icon_left {
+    flex-grow: 1;
+   /*  width: 10%; */
+    text-align: center;
+    color: rgb(88, 88, 88);
+}
+
+.send_bar_message{
+  /*   width: 80%; */
+  flex-grow: 6;
+}
+
+.send_bar_message>input{
+    width: 100%;
+    padding: 0.8rem;
+    border: none;
+    border-radius: 0.5rem;
+}
+
+.icon_right {
+    flex-grow: 1;
+   /*  width: 10%; */
+    text-align: center;
+    color: rgb(88, 88, 88);
+
+}
+
+/* #endregion chat_bottom */
+
+
+/* #endregion col-right */
