--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,10 @@ body {
     background-color: rgb(236, 236, 236);
 }
 
+.friend_chat.selected {
+    background-color: rgb(236, 236, 236);
+}
+
 .friend_details {
     display: flex;
     column-gap: 1rem;
