--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,11 @@ body {
     top: 2rem;
     display: flex;
 }
+
 /* #endregion Commons */
 
 /* #region col-left */
 .col-left {
-   /*  background-color: aqua; */
     height: 100%;
     width: 30%;
 }
@@ -118,6 +118,11 @@ body {
     width: 100%;
 }
 
+.search_bar>input:focus-visible {
+    outline: none;
+    box-shadow: inset 0 0 0 1px cornflowerblue;
+}
+
 .search_bar>input::placeholder {
     color: lightgray;
     font-size: 13px;
@@ -170,7 +175,6 @@ body {
 /* #region col-right */
 
 .col-right {
-  /*   background-color: bisque; */
     height: 100%;
     width: 70%;
 }
@@ -226,46 +230,78 @@ body {
 }
 
 .messages_position {
-    padding: 5rem;
+    padding: 2rem 5rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;    
+    justify-content: space-around;  
+    row-gap: 1.7rem; 
 }
 
 .message_green{
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     background-color: palegreen;
     z-index: 2;
     border-top-left-radius: 0.8rem;
     border-top-right-radius: 0.8rem;
     border-bottom-left-radius: 0.8rem;
     text-align: left;
-    margin-bottom: 1rem;
     align-self: flex-end;
-
 }
 
 .message_white {
-    padding: 0.5rem;
+    padding: 0.5rem  1rem;
     background-color: white;
     border-top-right-radius: 0.8rem;
     border-bottom-left-radius: 0.8rem;
     border-bottom-right-radius: 0.8rem;
     z-index: 2;
-    /* border-radius: 0.5rem; */
     text-align: left;
     margin-top: 1rem;
     align-self: flex-start;
 }
 
 .text_message>p {
- font-size: 13px;
+    font-size: 13px;
 }
 
 .text_message>div {
-    font-size: 10px;
-    color: #babbb3;
+    font-size: 12px;
+    color: rgb(88, 88, 88);
     text-align: right;
+}
+
+.text_message {
+    position: relative;
+}
+
+.dropdown_action {
+    display: none;
+    position: absolute;
+    right: 0.3rem;
+    top: 0.3rem;
+    transform: translate(-10, -20%);
+}
+
+.text_message:hover .dropdown_action {
+    display: block;
+}
+
+.dropdown_text {
+    width: 120px;
+    position: absolute;
+    top: 1.2rem;
+    right: 0.3rem;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 10px rgb(75, 73, 73);
+    background-color: white;
+    color: black;
+    text-align: center;
+}
+
+.dropdown_text:hover .delete_drop {
+    background-color: gray;
+    cursor: pointer;
 }
 
 /* #endregion chat_main */
@@ -286,14 +322,12 @@ body {
 
 .icon_left {
     flex-grow: 1;
-   /*  width: 10%; */
     text-align: center;
     color: rgb(88, 88, 88);
 }
 
 .send_bar_message{
-  /*   width: 80%; */
-  flex-grow: 6;
+    flex-grow: 6;
 }
 
 .send_bar_message>input{
@@ -303,9 +337,13 @@ body {
     border-radius: 0.5rem;
 }
 
+.send_bar_message>input:focus-visible {
+    outline: none;
+    box-shadow: inset 0 0 0 1px cornflowerblue;
+}
+
 .icon_right {
     flex-grow: 1;
-   /*  width: 10%; */
     text-align: center;
     color: rgb(88, 88, 88);
 
